tests/traci/get_variable/StoppingPlaces/ChargingStations/errors/UnknownChargingStation/testclient.prog
simstep2 48
getvariable 0x25 0x51 xxx
simstep2 50

